--- a/kubedefs/dbdeploy.yaml
+++ b/kubedefs/dbdeploy.yaml
@@ -33,3 +33,11 @@ spec:
         - name: vpro-db-data
           persistentVolumeClaim:
             claimName: db-pv-claim 
+
+      initContainers:
+        - name: busybox
+          image: busybox:latest
+          args: ["rm", "-rf", "/var/lib/mysql/lost+found"]
+          volumeMounts:
+            - name: vpro-db-data
+              mountPath: /var/lib/mysql
