--- a/kubedefs/appingress.yaml
+++ b/kubedefs/appingress.yaml
@@ -4,13 +4,14 @@ metadata:
   name: vpro-ingress
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   ingressClassName: nginx
   rules:
   - host: vprofile.kyleallendorf.dev
     http:
       paths:
-      - path: /
+      - path: /*
         pathType: Prefix
         backend:
           service:
