--- a/kubedefs/appingress.yaml
+++ b/kubedefs/appingress.yaml
@@ -4,7 +4,12 @@ metadata:
   name: vpro-ingress
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:692859928420:certificate/7979c2ba-6728-453e-ba24-f125b80ca592
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
+    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
+    alb.ingress.kuberenetes.io/scheme: internet-facing
+    alb.ingress.kuberenetes.io/group: vproapp
 spec:
   ingressClassName: nginx
   rules:
