Reupload of Kubedefs
Typo error in appingress.yaml, prevented creation of Ingress resource

--- a/kubedefs/appingress.yaml
+++ b/kubedefs/appingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: vpro-ingress
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
+spec:
   ingressClassName: nginx
   rules:
   - host: vprofile.kyleallendorf.dev
