--- a/kubedefs/nginx-config.yaml
+++ b/kubedefs/nginx-config.yaml
@@ -1,7 +1,10 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
+  labels:
+    app: ingress-nginx
   name: nginx-config
   namespace: ingress-nginx
 data:
   hsts: "false"
+  ssl-redirect: "false"
