--- a/kubedefs/nginx-config.yaml
+++ b/kubedefs/nginx-config.yaml
@@ -2,7 +2,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   labels:
-    app: ingress-nginx
+    app: vpro-ingress
   name: nginx-config
   namespace: ingress-nginx
 data:
