--- a/kubedefs/appingress.yaml
+++ b/kubedefs/appingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: "*.amazonaws.com"
+  - host: aa1d4c173cb4149a99cd1b03c73cf450-a43a4286bd0147d3.elb.us-east-1.amazonaws.com
     http:
       paths:
       - path: /*
