--- a/kubedefs/appingress.yaml
+++ b/kubedefs/appingress.yaml
@@ -4,8 +4,13 @@ metadata:
   name: vpro-ingress
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
+    cert-manager.io/issuer: "letsencrypt-staging"
 spec:
   ingressClassName: nginx
+  tls:
+  - hosts:
+    -  vprofile.kyleallendorf.dev
+    secretName: vpro-letsencrypt-staging
   rules:
   - host: vprofile.kyleallendorf.dev
     http:
