--- a/kubedefs/letsencryptissuer.yaml
+++ b/kubedefs/letsencryptissuer.yaml
@@ -1,18 +1,18 @@
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
-  name: letsencrypt-staging
+  name: letsencrypt-prod
 spec:
   acme:
     # The ACME server URL
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    server: https://acme-v02.api.letsencrypt.org/directory
     # Email address used for ACME registration
     email: kyleallendorf@gmail.com
     # The ACME certificate profile
     profile: tlsserver
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
-      name: vpro-letsencrypt-staging
+      name: vpro-letsencrypt-production
     # Enable the HTTP-01 challenge provider
     solvers:
       - http01:
