--- a/kubedefs/appingress.yaml
+++ b/kubedefs/appingress.yaml
@@ -4,13 +4,13 @@ metadata:
   name: vpro-ingress
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
-    cert-manager.io/issuer: "letsencrypt-staging"
+    cert-manager.io/issuer: "letsencrypt-prod"
 spec:
   ingressClassName: nginx
   tls:
   - hosts:
     -  vprofile.kyleallendorf.dev
-    secretName: vpro-letsencrypt-staging
+    secretName: vpro-letsencrypt-production
   rules:
   - host: vprofile.kyleallendorf.dev
     http:
